test_fixtures/function/missing_comma_in_parameters.lox
// ParserError: UnexpectedToken found Identifier at l3c14 expected CloseParen

fun foo(a, b c, d, e, f) {}
